Sources/CMozzAudio/include/mozz_audio.h

// Generated by cbindgen from audio/ffi. Do not edit; run tools/generate-audio-header.sh.

#ifndef MOZZ_AUDIO_H
#define MOZZ_AUDIO_H

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Opaque player handle.
 */
typedef struct MozzPlayer MozzPlayer;

/**
 * Read bytes from a shell-owned stream.
 *
 * Returns the number of bytes read, `0` at the end of the stream, or a
 * negative value on error. Called only from the decode thread, never from the
 * audio callback, so it may block on a network.
 */
typedef intptr_t (*MozzReadFn)(void *ctx, uint8_t *buffer, uintptr_t length);

/**
 * Seek a shell-owned stream. `whence` is 0 start, 1 current, 2 end.
 *
 * Returns the new absolute position, or negative on error.
 */
typedef int64_t (*MozzSeekFn)(void *ctx, int64_t offset, int whence);

/**
 * Release whatever the shell allocated for a stream.
 */
typedef void (*MozzCloseFn)(void *ctx);

/**
 * A stream of encoded audio owned by the shell.
 */
typedef struct MozzSource {
  /**
   * Passed back to every callback. Opaque here.
   */
  void *ctx;
  /**
   * Required.
   */
  MozzReadFn read;
  /**
   * Required. A stream that cannot seek cannot be decoded, because
   * containers keep their index at the end.
   */
  MozzSeekFn seek;
  /**
   * Called exactly once when the decoder is finished with the stream.
   */
  MozzCloseFn close;
} MozzSource;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Create a player. Returns null if the decode thread cannot be started.
 *
 * # Safety
 * The returned pointer must be released with [`mozz_player_free`] exactly once.
 */
struct MozzPlayer *mozz_player_new(uint32_t sample_rate,
                                   uint16_t channels,
                                   uintptr_t capacity_frames);

/**
 * Destroy a player, stopping playback and closing the device.
 *
 * # Safety
 * `player` must come from [`mozz_player_new`] and must not be used afterwards.
 * Passing null is allowed and does nothing.
 */
void mozz_player_free(struct MozzPlayer *player);

/**
 * Play `source` immediately, discarding anything queued.
 *
 * `extension` may be null; it is only a hint and the bytes always win.
 *
 * # Safety
 * `player` must be a live handle. `source`'s callbacks must remain valid until
 * its `close` is invoked.
 */
void mozz_player_play_now(struct MozzPlayer *player,
                          struct MozzSource source,
                          const char *extension,
                          uint64_t track,
                          double gain_db,
                          bool has_gain);

/**
 * Queue `source` behind the current track, so they meet with no gap.
 *
 * # Safety
 * As [`mozz_player_play_now`].
 */
void mozz_player_play_next(struct MozzPlayer *player,
                           struct MozzSource source,
                           const char *extension,
                           uint64_t track,
                           double gain_db,
                           bool has_gain);

/**
 * # Safety
 * `player` must be a live handle or null.
 */
void mozz_player_pause(struct MozzPlayer *player);

/**
 * # Safety
 * `player` must be a live handle or null.
 */
void mozz_player_resume(struct MozzPlayer *player);

/**
 * # Safety
 * `player` must be a live handle or null.
 */
void mozz_player_stop(struct MozzPlayer *player);

/**
 * # Safety
 * `player` must be a live handle or null.
 */
void mozz_player_seek(struct MozzPlayer *player, double seconds);

/**
 * 0 idle, 1 playing, 2 paused, 3 ended. A null player is idle.
 *
 * # Safety
 * `player` must be a live handle or null.
 */
uint32_t mozz_player_state(const struct MozzPlayer *player);

/**
 * Seconds of the current track that have actually reached the device.
 *
 * # Safety
 * `player` must be a live handle or null.
 */
double mozz_player_position_seconds(const struct MozzPlayer *player);

/**
 * The track the audio is currently in, which is not necessarily the last
 * queued.
 *
 * # Safety
 * `player` must be a live handle or null.
 */
uint64_t mozz_player_current_track(const struct MozzPlayer *player);

/**
 * True when a decode has failed since the last command.
 *
 * # Safety
 * `player` must be a live handle or null.
 */
bool mozz_player_has_failed(const struct MozzPlayer *player);

/**
 * Set the ten-band equaliser. `gains_db` must point to ten doubles.
 *
 * # Safety
 * `player` must be a live handle or null, and `gains_db` must be readable for
 * ten `f64` values.
 */
void mozz_player_set_equalizer(struct MozzPlayer *player,
                               const double *gains_db,
                               double preamp_db,
                               bool enabled);

/**
 * Set ReplayGain. `mode` is 0 off, 1 track, 2 album.
 *
 * # Safety
 * `player` must be a live handle or null.
 */
void mozz_player_set_replay_gain(struct MozzPlayer *player, uint32_t mode, double preamp_db);

/**
 * Why the last decode failed: 0 none, 1 unsupported, 2 interrupted, 3 corrupt.
 *
 * A bool was not enough. "This is not audio we can decode" and "the network
 * went away" call for opposite responses - one should be remembered so the
 * track is never retried, the other must be retried and must not mark the
 * track as broken. A shell with only `has_failed` either retries forever on a
 * file that will never play, or writes off a good track over a one second
 * network fault.
 *
 * # Safety
 * `player` must be a live handle or null.
 */
uint32_t mozz_player_failure_kind(const struct MozzPlayer *player);

/**
 * True when the last failure is worth retrying rather than remembering.
 *
 * Offered alongside the raw kind so a shell does not have to hard-code which
 * numbers mean transient - a judgement that belongs with the engine, and one
 * that would otherwise be duplicated and drift in every shell.
 *
 * # Safety
 * `player` must be a live handle or null.
 */
bool mozz_player_failure_is_retryable(const struct MozzPlayer *player);

/**
 * Set the listener's volume, `0.0` silent to `1.0` unity.
 *
 * This is the shell's own level control, applied after ReplayGain and the
 * equaliser. Values are clamped to `0.0..=1.0` inside the engine, and the
 * change is ramped so it does not click. A null player is ignored.
 *
 * # Safety
 * `player` must be a live handle or null.
 */
void mozz_player_set_volume(struct MozzPlayer *player, double volume);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* MOZZ_AUDIO_H */